--- a/src/app/services/restfull/restfull.component.html
+++ b/src/app/services/restfull/restfull.component.html
@@ -1,3 +1,5 @@
-<p>
-  restfull works!
-</p>
+<!--The content below is only a placeholder and can be replaced.-->
+<div>Estos son los registros de la tabla {{title}}</div> 
+<div *ngFor="let item of tipodoc">
+    {{item.id_curso}} {{item.nombre_curso}}
+</div> 
