--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,30 @@
 <!--The content below is only a placeholder and can be replaced.-->
+
+<mat-toolbar color="primary">
+
+    <mat-toolbar-row>
+        <span>Aulas Virtuales</span>
+        <span class="example-spacer"></span>
+                 
+        <button mat-button [matMenuTriggerFor]="menu"><mat-icon class="example-icon">list</mat-icon>Cursos</button>
+        <mat-menu #menu="matMenu">
+          <button mat-menu-item>Angular</button>
+          <button mat-menu-item>Legislacion</button>
+            
+       </mat-menu>
+       <button mat-raised-button color="green">Iniciar sesion</button> 
+     </mat-toolbar-row>
+    </mat-toolbar>
+ 
+<!--insertar botones -->
+
+
 <div>Estos son los registros de la tabla {{title}}</div> 
 <div *ngFor="let item of tipodoc">
     {{item.id_curso}} {{item.nombre_curso}}
 </div> 
+
+<!--insertar link 
+<mat-icon class="example-icon"><a href="url"
+    terget="_blank"></a>aqui nombre icono</mat-icon>
+-->
