--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+/*deeppurple-amber.css
+indigo-pink.css
+pink-bluegrey.css
+purple-green.css ( Estos son los temas que se pueden cambiar en el indigo-pink.css) */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+body {
+    padding: 0;
+    margin: 0;
+
+}
