seinicia maquetado de index

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 <mat-toolbar color="primary">
-
     <mat-toolbar-row>
         <span>Aulas Virtuales</span>
         <span class="example-spacer"></span>
@@ -13,8 +12,10 @@
             
        </mat-menu>
        <button mat-raised-button color="green">Iniciar sesion</button> 
-     </mat-toolbar-row>
-    </mat-toolbar>
+    </mat-toolbar-row>
+</mat-toolbar>
+  
+
  
 <!--insertar botones -->
 
@@ -28,3 +29,5 @@
 <mat-icon class="example-icon"><a href="url"
     terget="_blank"></a>aqui nombre icono</mat-icon>
 -->
+
+<hello-world></hello-world>
