--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-<mat-toolbar color="primary">
-    <mat-toolbar-row>
-        <span>Aulas Virtuales</span>
-        <span class="example-spacer"></span>
-                 
-        <button mat-button [matMenuTriggerFor]="menu"><mat-icon class="example-icon">list</mat-icon>Cursos</button>
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item>Angular</button>
-          <button mat-menu-item>Legislacion</button>
-            
-       </mat-menu>
-       <button mat-raised-button color="green">Iniciar sesion</button> 
-    </mat-toolbar-row>
-</mat-toolbar>
-  
+<avsidenav> </avsidenav>
 
- 
 <!--insertar botones -->
 
 
@@ -29,5 +14,3 @@
 <mat-icon class="example-icon"><a href="url"
     terget="_blank"></a>aqui nombre icono</mat-icon>
 -->
-
-<hello-world></hello-world>
