--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
-
-<avsidenav> </avsidenav>
+<avnavbar></avnavbar>
+<!-- <avsidenav> </avsidenav> -->
+<avlogin></avlogin>
 
 <!--insertar botones -->
 
