--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,31 +1,20 @@
-<form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
-  <mat-card class="shipping-card">
-    <mat-card-header class="full-width">
-      <div class="full-width">Login</div>
-    </mat-card-header>
-    <mat-card-content>
-      <div class="row">
-        <div class="col">
-          <mat-form-field class="">
-            <input matInput placeholder="Company" formControlName="company">
-          </mat-form-field>
+<div class="container">
+    <div class="valign-wrapper vh-100">
+        <div class="row">
+            <form action="" class="col s8 offset-s2">
+                <div class=" center-align">
+                    <div class="input-field col s8 offset-s2">
+                    <input placeholder="Email" type="email" class="validate">
+                    <label >Email</label>
+                    </div>
+                    <div class="input-field col s8 offset-s2">
+                    <input placeholder="Contraseña" id="first_name" type="password" class="validate">
+                    </div>
+                    <button class="btn waves-effect waves-light light-blue darken-4" type="submit" name="action">Submit
+                        <i class="material-icons right">send</i>
+                    </button>
+                </div>
+            </form>
         </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <mat-form-field class="">
-            <input matInput placeholder="First name" formControlName="firstName">
-            <mat-error *ngIf="addressForm.controls['firstName'].hasError('required')">
-              First name is <strong>required</strong>
-            </mat-error>
-          </mat-form-field>
-        </div>
-      </div>
-      
-      
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-raised-button color="primary" type="submit">Submit</button>
-    </mat-card-actions>
-  </mat-card>
-</form>
+    </div>
+</div>
