--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -1,3 +1,22 @@
-<p>
-  inicio works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col s12">
+
+      <div class="row mt-5" >
+        <div class="col s12 m6" *ngFor="let curso of cursos">
+          <div class="card blue-grey darken-1">
+            <div class="card-content white-text">
+              <span class="card-title">{{ curso.nombre_curso }}</span>
+              <p>{{ curso.descripcion_curso }}</p>
+            </div>
+            <div class="card-action">
+              <a href="#">ver</a>
+              <a href="#">matricular</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
