se terminamaquetacion de formulario registro

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -2,9 +2,10 @@
     <div class="valign-wrapper vh-100">
         <div class="row">
             <form class="col s8 offset-s2">
+               
                 <div class="row center-align">
                     <div class="input-field col s8 offset-s2">
-                        <input  type="email" id="email" class="validate">
+                        <input  type="email" id="email" class="validate" formControlName="email" >
                         <label for="email">Email</label>
                         <span class="helper-text" data-error="upps tienes un error" data-success="ok"></span>
                     </div>
