--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -2,8 +2,8 @@
     <div class="valign-wrapper vh-100">
         <div class="row">
             <form class="col s8 offset-s2">
-               
-                <div class="row center-align">
+                 <a> Login</a>
+                <div class="row center-align">  
                     <div class="input-field col s8 offset-s2">
                         <input  type="email" id="email" class="validate" formControlName="email" >
                         <label for="email">Email</label>
@@ -14,8 +14,11 @@
                         <label for="pass">Contraseña</label>
                     </div>
                     <div class="col s12">
-                        <a routerLink="/registro">Registrate aqui</a>
+                        <h1>
+                        </h1>
+                        <a routerLink="/registro">Registrate aqui</a>                   
                     </div>
+
                     <button class="btn waves-effect waves-light light-blue darken-4" type="submit" name="action">Submit
                         <i class="material-icons right">send</i>
                     </button>
